# DevOps_with_k8s

./: .gitignore  README.md  docker-helper.sh  pyproject.toml  setup_k3d.sh
.github/workflows/: delete-deployment.yaml  main.yaml
log_output/: Dockerfile  docker-helper.sh
log_output/manifests/: configmap.yaml  deployment.yaml  ingress.yaml  persistentvolume.yaml  persistentvolumeclaim.yaml  persistenvolumeclaim.yaml  service.yaml
log_output/reader/: pyproject.toml
log_output/reader/src/: main.py
log_output/src/: main.py
log_output/writer/: Dockerfile  writer.py
manifests/: deployment.yaml
pong_app/: README.md  pyproject.toml
pong_app/manifests/: db-deployment.yaml  deployment.yaml  secret.enc.yaml  service.yaml
pong_app/src/: main.py
project/: kustomization.yaml  pyproject.toml
project/app/manifests/: deployment.yaml  ingress.yaml  persistentvolumeclaim.yaml  service.yaml
project/app/src/: main.py
project/app/src/html/: index.html
project/backend/: pyproject.toml
project/backend/manifests/: cron_job.yaml  db_backup.yaml  deployment.yaml  postgres.yaml  secret.enc.yaml  service.yaml
project/backend/src/: main.py
project/db_backup/: Dockerfile  backup_db.sh
project/manifests/: deployment.yaml  ingress.yaml  nodeport-service.yaml  persistentvolume.yaml  persistentvolumeclaim.yaml  service.yaml
project/src/: main.py
project/todo_cronjob/: Dockerfile  create_random.sh
src/: main.py
