[tool.poetry]
name = "devops-with-k8s"
version = "0.1.0"
description = ""
authors = ["arttu@example.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
asyncio = "^3.4.3"
uuid = "^1.30"
logging = "^0.4.9.6"
requests = "^2.32.2"
SQLAlchemy = "2.0.37"
psycopg2-binary = "^2.9.8"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
